hotfix : fix controller repo name patient > patients

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -27,7 +27,7 @@ en:
     link-messaging: "Chat"
     link-schedule-meeting: "Schedule an appointment"
     show-profil-doctor_html: "Show therapist's <br>profile "
-    show-profil-patient_html: "Show patient's <br>profile "
+    show-profil-patient_html: "Show patients's <br>profile "
     next-consultation: "Next consultation :"
     the: ""
     at: "at"
