--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -27,7 +27,7 @@ fr:
     link-messaging: "Messagerie"
     link-schedule-meeting: "Planifier un rendez-vous"
     show-profil-doctor_html: "Afficher profil <br>praticien "
-    show-profil-patient_html: "Afficher profil <br>patient "
+    show-profil-patient_html: "Afficher profil <br>patients "
     next-consultation: "Prochaine consultation :"
     the: "Le"
     at: "à"
