--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -17,7 +17,7 @@ en:
     content-card3: "Make appointments online 24/7 and organize video chats."
 
   patients:
-    title-patients: "My patients"
+    title-patients: "My patient"
     title-schedule: "My schedule"
     
   
@@ -27,7 +27,7 @@ en:
     link-messaging: "Chat"
     link-schedule-meeting: "Schedule an appointment"
     show-profil-doctor_html: "Show therapist's <br>profile "
-    show-profil-patient_html: "Show patients's <br>profile "
+    show-profil-patient_html: "Show patient's <br>profile "
     next-consultation: "Next consultation :"
     the: ""
     at: "at"
